--- a/backtesting/roboadvisor/Dockerfile
+++ b/backtesting/roboadvisor/Dockerfile
@@ -92,3 +92,4 @@ RUN cp `find /root/.zipline/ -name "metadata.json"` /root/.zipline/data/alpaca/2
 RUN cp $(find /root/.zipline/data/quantopian-quandl -name "adjustments.sqlite") /root/.zipline/data/alpaca/2018-06-11T20\;08\;42.452595/
 RUN zipline run -f algo.py -b alpaca --start 2018-01-01 --end 2018-06-01 -o output.pickle
 RUN curl --upload-file output.pickle https://transfer.sh/output.pickle
+RUN curl --upload-file logs.txt https://transfer.sh/logs.txt
