--- a/deployment/makefile
+++ b/deployment/makefile
@@ -1,6 +1,21 @@
 algo:
-	zipline run -f algo.py --start $(start) --end $(end) -o out.pickle
+	@if [ ! -d "backtests" ]; then \
+		echo "Creating backtests folder"; \
+		mkdir "backtests"; \
+	fi
+
+	@if [ -d "backtests/$(name)" ]; then \
+		echo "Provide unique backtest name"; \
+	else \
+		echo "Running algorithm"; \
+		zipline run -f algo.py --start $(start) --end $(end) -o out.pickle; \
+		cd "backtests"; \
+		mkdir "$(name)"; \
+		mv ../logs.txt ../out.pickle $(name); \
+	fi
+	
 industries:
 	python3 polygon_companies.py
+
 returns:
-	python unpickle.py
+	python unpickle.py -n $(name)
